--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,6 +17,7 @@
     "react-google-charts": "^5.2.1",
     "react-router-dom": "^6.28.0",
     "react-tsparticles": "^2.12.2",
+    "recharts": "^2.15.3",
     "tsparticles": "^2.12.0"
   },
   "devDependencies": {
